--- a/bin/ncdns/Cargo.toml
+++ b/bin/ncdns/Cargo.toml
@@ -1,7 +1,7 @@
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
 name = "ncdns"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 
 [[bin]]
@@ -19,28 +19,26 @@ dev = [
   "nanocl_utils/ntex_test_client",
 ]
 test = ["nanocl_utils/ntex_test_client"]
+vendored = ["openssl/vendored"]
 
 [build-dependencies]
-clap = { version = "4.4.11", features = ["derive"] }
+clap = { version = "4.4", features = ["derive"] }
 clap_mangen = { version = "0.2" }
-nanocl_utils = { version = "0.3.1", features = ["build_tools"] }
+nanocl_utils = { version = "0.4", features = ["build_tools"] }
 
 [dev-dependencies]
-serde_yaml = "0.9.25"
+serde_yaml = "0.9"
 
 [dependencies]
-log = "0.4.20"
-clap = { version = "4.4.11", features = ["derive"] }
-ntex = { version = "0.7.16", features = ["tokio"] }
-tokio = { version = "1.34.0", features = ["fs"] }
-futures = "0.3.26"
-serde = { version = "1.0.192", features = ["derive"] }
-serde_json = "1.0.108"
-nanocld_client = { version = "0.12.0", features = ["tokio"] }
-nanocl_error = { version = "0.1.1", features = ["io", "http", "http_client"] }
-nanocl_utils = { version = "0.3.1", features = [
-  "ntex",
-  "logger",
-  "versioning",
-] }
+log = "0.4"
+clap = { version = "4.4", features = ["derive"] }
+ntex = { version = "0.7", features = ["tokio", "openssl"] }
+tokio = { version = "1.34", features = ["fs"] }
+futures = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+nanocld_client = { version = "0.13", features = ["tokio"] }
+nanocl_error = { version = "0.2", features = ["io", "http", "http_client"] }
+nanocl_utils = { version = "0.4", features = ["ntex", "logger", "versioning"] }
 utoipa = { version = "4.1", features = ["yaml"], optional = true }
+openssl = "0.10"
