--- a/bin/ncproxy/Cargo.toml
+++ b/bin/ncproxy/Cargo.toml
@@ -1,7 +1,7 @@
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
 name = "ncproxy"
-version = "0.9.0"
+version = "0.10.0"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
 description = "Official nanocl controller daemon proxy"
@@ -25,44 +25,42 @@ dev = [
   "nanocl_utils/ntex_test_client",
 ]
 test = ["nanocl_utils/ntex_test_client"]
+vendored = ["openssl/vendored"]
 
 [build-dependencies]
-clap = { version = "4.4.11", features = ["derive"] }
+clap = { version = "4.4", features = ["derive"] }
 clap_mangen = { version = "0.2" }
-nanocl_utils = { version = "0.3.1", features = ["build_tools"] }
+nanocl_utils = { version = "0.4", features = ["build_tools"] }
 
 [dev-dependencies]
-serde_yaml = "0.9.25"
-bollard-next = "0.15.4"
+serde_yaml = "0.9"
+bollard-next = "0.15"
 
 [dependencies]
-log = "0.4.20"
-liquid = "0.26.1"
-clap = { version = "4.4.11", features = ["derive"] }
-ntex = { version = "0.7.16", features = ["tokio"] }
-tokio = { version = "1.34.0", features = ["fs"] }
-serde = "1.0.192"
-serde_json = "1.0.108"
-futures = "0.3.25"
-notify = { version = "6.1.1", default-features = false, features = [
+log = "0.4"
+liquid = "0.26"
+clap = { version = "4.4", features = ["derive"] }
+ntex = { version = "0.7", features = ["tokio"] }
+tokio = { version = "1.34", features = ["fs"] }
+serde = "1.0"
+serde_json = "1.0"
+futures = "0.3"
+notify = { version = "6.1", default-features = false, features = [
   "macos_kqueue",
 ] }
-nanocld_client = { version = "0.12.0", features = ["tokio"] }
-nanocl_error = { version = "0.1.1", features = [
+nanocld_client = { version = "0.13", features = ["tokio"] }
+nanocl_error = { version = "0.2", features = [
   "io",
   "ntex",
   "http",
   "http_client",
   "serde_json",
 ] }
-nanocl_utils = { version = "0.3.1", features = [
-  "ntex",
-  "logger",
-  "versioning",
-] }
+nanocl_utils = { version = "0.4", features = ["ntex", "logger", "versioning"] }
 utoipa = { version = "4.1", features = ["yaml"], optional = true }
-chrono = { version = "0.4.31", default-features = false, features = [
+chrono = { version = "0.4", default-features = false, features = [
   "std",
   "clock",
   "serde",
 ] }
+openssl = "0.10"
