--- a/bin/ncvpnkit/Cargo.toml
+++ b/bin/ncvpnkit/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ncvpnkit"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,20 +8,22 @@ edition = "2021"
 [features]
 dev = ["nanocl_utils/dev"]
 test = []
+vendored = ["openssl/vendored"]
 
 [build-dependencies]
-nanocl_utils = { version = "0.3.1", features = ["build_tools"] }
+nanocl_utils = { version = "0.4", features = ["build_tools"] }
 
 [dependencies]
-log = "0.4.20"
-futures-util = "0.3.28"
-ntex = { version = "0.7.16", features = ["tokio"] }
-vpnkitrc = { version = "0.1.2", features = ["tokio"] }
-nanocld_client = { version = "0.12.0" }
-nanocl_utils = { version = "0.3.1", features = ["logger"] }
-serde_json = "1.0.108"
-nanocl_error = { version = "0.1.1", features = [
+log = "0.4"
+futures-util = "0.3"
+ntex = { version = "0.7", features = ["tokio"] }
+vpnkitrc = { version = "0.1", features = ["tokio"] }
+nanocld_client = { version = "0.13" }
+nanocl_utils = { version = "0.4", features = ["logger"] }
+serde_json = "1.0"
+nanocl_error = { version = "0.2", features = [
   "io",
   "http_client",
   "serde_json",
 ] }
+openssl = "0.10"
