--- a/installer.yml
+++ b/installer.yml
@@ -53,7 +53,7 @@ Cargoes:
 - Name: nproxy
   Container:
     # {% if channel == "nightly" %}
-    Image: ghcr.io/next-hat/nproxy:1.25.0.4-nightly
+    Image: ghcr.io/next-hat/nproxy:1.25.0-n0.10-nightly
     # {% else %}
     Image: ghcr.io/next-hat/nproxy:1.25.0.3
     # {% endif %}
@@ -74,7 +74,7 @@ Cargoes:
 - Name: ncproxy
   Container:
     # {% if channel == "nightly" %}
-    Image: ghcr.io/next-hat/ncproxy:0.9.1-nightly
+    Image: ghcr.io/next-hat/ncproxy:0.10.0-nightly
     # {% else %}
     Image: ghcr.io/next-hat/ncproxy:0.9.0
     # {% endif %}
@@ -95,7 +95,7 @@ Cargoes:
 - Name: ndns
   Container:
     # {% if channel == "nightly" %}
-    Image: ghcr.io/next-hat/ndns:2.89.0.3-nightly
+    Image: ghcr.io/next-hat/ndns:2.89.0-n0.5-nightly
     # {% else %}
     Image: ghcr.io/next-hat/ndns:2.89.0.3
     # {% endif %}
@@ -109,14 +109,14 @@ Cargoes:
 - Name: ncdns
   Container:
     # {% if channel == "nightly" %}
-    Image: ghcr.io/next-hat/ncdns:0.4.0-nightly
+    Image: ghcr.io/next-hat/ncdns:0.5.0-nightly
     # {% else %}
     Image: ghcr.io/next-hat/ncdns:0.4.0
     # {% endif %}
     Tty: true
     Cmd:
-    - --conf-dir
-    - /opt/dns
+    - --state-dir
+    - ${{ state_dir }}/dns
     - --dns
     - 1.1.1.1
     - --dns
@@ -134,7 +134,7 @@ Cargoes:
 - Name: ndaemon
   Container:
     # {% if channel == "nightly" %}
-    Image: ghcr.io/next-hat/nanocld:0.12.1-nightly
+    Image: ghcr.io/next-hat/nanocld:0.13.0-nightly
     # {% else %}
     Image: ghcr.io/next-hat/nanocld:0.12.0
     # {% endif %}
@@ -176,7 +176,7 @@ Cargoes:
 - Name: ncvpnkit
   Container:
     # {% if channel == "nightly" %}
-    Image: ghcr.io/next-hat/ncvpnkit:0.2.0-nightly
+    Image: ghcr.io/next-hat/ncvpnkit:0.3.0-nightly
     # {% else %}
     Image: ghcr.io/next-hat/ncvpnkit:0.2.0
     # {% endif %}
