--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -68,11 +68,15 @@ jobs:
         run: |
           gh release delete-asset -y \
             $BINARY_NAME-$VERSION-$CHANNEL \
-            ${BINARY_NAME}_${VERSION}_amd64.deb \
+            ${BINARY_NAME}_${VERSION}_amd64.deb
+          gh release delete-asset -y \
+            $BINARY_NAME-$VERSION-$CHANNEL \
             ${BINARY_NAME}_${VERSION}_amd64.tar.gz || true
           gh release upload \
             $BINARY_NAME-$VERSION-$CHANNEL \
             target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
+          gh release upload \
+            $BINARY_NAME-$VERSION-$CHANNEL \
             target/linux/${BINARY_NAME}_${VERSION}_amd64.tar.gz#nanocl_amd64.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
