--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -54,13 +54,29 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
       - name: Create new draft release
         if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-        run: gh release create -d $BINARY_NAME-$VERSION-$CHANNEL -t $BINARY_NAME-$VERSION-$CHANNEL -F ./bin/$BINARY_NAME/changelog.md target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
+        run: |
+          gh release create -d \
+            $BINARY_NAME-$VERSION-$CHANNEL \
+            -t $BINARY_NAME-$VERSION-$CHANNEL \
+            -F ./bin/$BINARY_NAME/changelog.md \
+            target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
+            target/linux/${BINARY_NAME}_${VERSION}_amd64.tar.gz#nanocl_amd64.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
       - name: Update draft release
         if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
         run: |
-          gh release delete-asset -y $BINARY_NAME-$VERSION-$CHANNEL ${BINARY_NAME}_${VERSION}_amd64.deb || true
-          gh release upload $BINARY_NAME-$VERSION-$CHANNEL target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
+          gh release delete-asset -y \
+            $BINARY_NAME-$VERSION-$CHANNEL \
+            ${BINARY_NAME}_${VERSION}_amd64.deb
+          gh release delete-asset -y \
+            $BINARY_NAME-$VERSION-$CHANNEL \
+            ${BINARY_NAME}_${VERSION}_amd64.tar.gz || true
+          gh release upload \
+            $BINARY_NAME-$VERSION-$CHANNEL \
+            target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
+          gh release upload \
+            $BINARY_NAME-$VERSION-$CHANNEL \
+            target/linux/${BINARY_NAME}_${VERSION}_amd64.tar.gz#nanocl_amd64.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
