--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -59,7 +59,7 @@ jobs:
             $BINARY_NAME-$VERSION-$CHANNEL \
             -t $BINARY_NAME-$VERSION-$CHANNEL \
             -F ./bin/$BINARY_NAME/changelog.md \
-            target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb
+            target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#nanocl_amd64.deb \
             target/linux/${BINARY_NAME}_${VERSION}_amd64.tar.gz#nanocl_amd64.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
