--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -68,7 +68,7 @@ jobs:
         run: |
           gh release delete-asset -y \
             $BINARY_NAME-$VERSION-$CHANNEL \
-            ${BINARY_NAME}_${VERSION}_amd64.deb
+            ${BINARY_NAME}_${VERSION}_amd64.deb || true
           gh release delete-asset -y \
             $BINARY_NAME-$VERSION-$CHANNEL \
             ${BINARY_NAME}_${VERSION}_amd64.tar.gz || true
