fix/ncproxy: ssl redirection everytime

--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -1,18 +1,16 @@
 server {
   listen {{ listen }};
-  {% if ssl %}
-  listen {{ listen_https }} http2 ssl;
-
-  if ($scheme != https) {
-      return 301 https://$host$request_uri;
-  }
-  {% endif %}
   {% if domain %}server_name {{ domain }};
 
   if ($host != {{ domain }}) {
     return 502;
   }{% endif %}
   {% if ssl %}
+  listen {{ listen_https }} http2 ssl;
+
+  if ($scheme != https) {
+      return 301 https://$host$request_uri;
+  }
   ssl_certificate         {{ssl.Certificate}};
   ssl_certificate_key     {{ssl.CertificateKey}};
   {% if ssl.Dhparam %}
@@ -25,6 +23,8 @@ server {
   ssl_verify_client       on;
   {% endif %}
   {% endif %}
+  {% if hide_upstream %}
+  {% else %}
   {% for location in locations %}
   location {{ location.path }} {
     {% if location.redirect %}
@@ -39,4 +39,5 @@ server {
     {% endif %}
   }
   {% endfor %}
+  {% endif %}
 }
