test template again

--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -1,6 +1,6 @@
 server {
   listen {{ listen }};
-  {% ssl %}
+  {% if ssl %}
   listen {{ listen_https }} http2 ssl;
   {% endif %}
   {% if domain %}server_name {{ domain }};
