--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -1,13 +1,13 @@
 server {
   listen {{ listen }};
+  {% if ssl %}
+  listen {{ listen_https }} http2 ssl;
+  {% endif %}
   {% if domain %}server_name {{ domain }};
-
   if ($host != {{ domain }}) {
     return 502;
   }{% endif %}
   {% if ssl %}
-  listen {{ listen_https }} http2 ssl;
-
   if ($scheme != https) {
       return 301 https://$host$request_uri;
   }
