refactor/nanocl: cleaner help menu

--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -3,7 +3,7 @@ name = "nanocl"
 version = "0.13.1"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
-description = "The Self-Sufficient Hybrid-Cloud Orchestrator CLI"
+description = "The Self-Sufficient Orchestrator CLI"
 readme = "../../README.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://next-hat.com/nanocl"
