clean mess again

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "aarch",
     "canonicalize",
     "chrono",
+    "cpus",
     "crond",
     "curr",
     "dialoguer",
@@ -22,6 +23,8 @@
     "dotenvy",
     "errno",
     "Insertable",
+    "metrs",
+    "Metrsd",
     "nanocl",
     "Nanocld",
     "nstore",
