--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
   "cSpell.words": [
     "aarch",
     "canonicalize",
+    "certbot",
     "chrono",
     "cpus",
     "crond",
@@ -27,6 +28,7 @@
     "Metrsd",
     "nanocl",
     "Nanocld",
+    "ncproxy",
     "nstore",
     "ntex",
     "schemars",
