--- a/Makefile.toml
+++ b/Makefile.toml
@@ -149,7 +149,11 @@ args = [
   "--no-default-features",
   "--features",
   "test",
-  "-j",
+  "--output-path",
+  "./lcov.info",
+  "--lcov",
+  "--",
+  "--test-threads",
   "1",
 ]
 
@@ -163,9 +167,7 @@ args = [
   "--no-default-features",
   "--features",
   "test",
-  "--output-path",
-  "./lcov.info",
-  "--lcov",
+  "--html",
   "--",
   "--test-threads",
   "1",
