--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -85,3 +85,4 @@ utoipa = { version = "4.2", features = ["yaml"], optional = true }
 notify = "6.1"
 ntex-cors = "0.5"
 rand = "0.8"
+openssl = { version = "0.10" }
