--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -32,6 +32,7 @@ release = []
 clap = { version = "4.4", features = ["derive"] }
 clap_mangen = { version = "0.2" }
 nanocl_utils = { version = "0.4", features = ["build_tools"] }
+nanocl_stubs = { version = "0.13", features = ["clap"] }
 
 [dev-dependencies]
 serde_yaml = "0.9"
@@ -79,7 +80,7 @@ chrono = { version = "0.4", default-features = false, features = [
 jsonschema = { version = "0.17", default-features = false }
 nanocld_client = { version = "0.13", features = ["tokio"] }
 metrsd_client = "0.5"
-nanocl_stubs = { version = "0.13", features = ["serde"] }
+nanocl_stubs = { version = "0.13", features = ["serde", "clap"] }
 nanocl_utils = { version = "0.4", features = ["unix", "ntex", "logger"] }
 utoipa = { version = "4.2", features = ["yaml"], optional = true }
 notify = "6.1"
