--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -17,6 +17,7 @@ default = ["serde"]
 serde = ["dep:serde", "uuid/serde", "chrono/serde"]
 utoipa = ["dep:utoipa"]
 schemars = ["dep:schemars", "bollard-next/schemars"]
+clap = ["dep:clap"]
 test = []
 
 [dependencies]
@@ -30,3 +31,4 @@ chrono = { version = "0.4", default-features = false, features = [
 serde = { version = "1.0", features = ["derive"], optional = true }
 utoipa = { version = "4", features = ["uuid", "chrono"], optional = true }
 schemars = { version = "0.8", features = ["uuid1", "chrono"], optional = true }
+clap = { version = "4.4", features = ["derive", "cargo"], optional = true }
