feature/ncproxy: AllowedIps and reenable websocket

--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -26,7 +26,9 @@ server {
   {% if hide_upstream %}
   {% else %}
   {% for location in locations %}
-  location {{ location.path }} {
+  location {{ location.path }} { {% if location.headers %}{% for header in location.headers %}
+    proxy_set_header {{ header }};
+    {% endfor %}{% endif %}{% if location.version %}proxy_http_version {{ location.version }};{% endif %}
     {% if location.redirect %}
     return {{ location.redirect }} {{ location.upstream_key }};
     {% else %}
@@ -37,6 +39,9 @@ server {
     proxy_set_header X-Real-IP          $remote_addr;
     proxy_pass {{ location.upstream_key }}/;
     {% endif %}
+    {% if location.allowed_ips %}{% for allowed_ip in location.allowed_ips %}
+    allow {{ allowed_ip }};
+    {% endfor %}deny all;{% endif %}
   }
   {% endfor %}
   {% endif %}
