better http template

--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -28,7 +28,8 @@ server {
     proxy_set_header X-Forwarded-Proto  $scheme;
     proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
     proxy_set_header X-Real-IP          $remote_addr;
-    proxy_pass {{ location.upstream_key }}/;{% endif %}{% if location.allowed_ips %}{% for allowed_ip in location.allowed_ips %}
+    proxy_pass {{ location.upstream_key }}/;
+    {% endif %}{% if location.allowed_ips %}{% for allowed_ip in location.allowed_ips %}
     allow {{ allowed_ip }};
     {% endfor %}deny all;{% endif %}
   }
