fix some spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
     "Insertable",
     "keygen",
     "libc",
+    "mangen",
     "metrs",
     "Metrsd",
     "nanocl",
@@ -44,6 +45,7 @@
     "openapi",
     "proto",
     "qcow",
+    "rustc",
     "schemars",
     "sockaddr",
     "statefile",
