chore: normalize var file (#836)
* chore: normalize var file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "crond",
     "curr",
     "dialoguer",
+    "dnsmasq",
     "dotenv",
     "dotenvy",
     "errno",
@@ -29,20 +30,30 @@
     "iface",
     "ifaddrs",
     "Insertable",
+    "jsonschema",
     "keygen",
     "libc",
+    "mangen",
     "metrs",
     "Metrsd",
     "nanocl",
     "Nanocld",
+    "ncdns",
     "ncproxy",
+    "ncvpnkit",
     "nstore",
     "ntex",
+    "openapi",
+    "proto",
     "qcow",
+    "rustc",
     "schemars",
     "sockaddr",
     "statefile",
+    "unexpose",
     "uninit",
-    "utoipa"
+    "utoipa",
+    "vpnkit",
+    "vpnkitrc"
   ]
 }
