wip cleaner tasks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
     "iface",
     "ifaddrs",
     "Insertable",
+    "ipam",
     "jsonschema",
     "keygen",
     "libc",
@@ -41,6 +42,7 @@
     "ncdns",
     "ncproxy",
     "ncvpnkit",
+    "nographic",
     "nstore",
     "ntex",
     "openapi",
