--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
     "ncdns",
     "ncproxy",
     "ncvpnkit",
+    "newgrp",
     "nographic",
     "nstore",
     "ntex",
@@ -54,6 +55,8 @@
     "statefile",
     "unexpose",
     "uninit",
+    "unistd",
+    "usermod",
     "utoipa",
     "vpnkit",
     "vpnkitrc"
