refactor/nanocld: event system in thread and task interface (#838)
* refactor/nanocld: event system in thread and task interface

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
     "iface",
     "ifaddrs",
     "Insertable",
+    "ipam",
     "jsonschema",
     "keygen",
     "libc",
@@ -41,6 +42,8 @@
     "ncdns",
     "ncproxy",
     "ncvpnkit",
+    "newgrp",
+    "nographic",
     "nstore",
     "ntex",
     "openapi",
@@ -52,6 +55,8 @@
     "statefile",
     "unexpose",
     "uninit",
+    "unistd",
+    "usermod",
     "utoipa",
     "vpnkit",
     "vpnkitrc"
