upgrade metrs and vpnkitrc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     "canonicalize",
     "certbot",
     "chrono",
+    "cockroachdb",
     "consts",
     "cpus",
     "crond",
@@ -34,6 +35,7 @@
     "ipam",
     "jsonschema",
     "keygen",
+    "letsencrypt",
     "libc",
     "mangen",
     "metrs",
@@ -43,8 +45,12 @@
     "ncdns",
     "ncproxy",
     "ncvpnkit",
+    "ndaemon",
+    "ndns",
     "newgrp",
+    "nmetrics",
     "nographic",
+    "nproxy",
     "nstore",
     "ntex",
     "openapi",
