refactor/nanocl: state apply with better error handling (#841)
* refactor/nanocl: state apply with better error handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,8 @@
     "canonicalize",
     "certbot",
     "chrono",
+    "cockroachdb",
+    "consts",
     "cpus",
     "crond",
     "curr",
@@ -33,6 +35,7 @@
     "ipam",
     "jsonschema",
     "keygen",
+    "letsencrypt",
     "libc",
     "mangen",
     "metrs",
@@ -42,8 +45,12 @@
     "ncdns",
     "ncproxy",
     "ncvpnkit",
+    "ndaemon",
+    "ndns",
     "newgrp",
+    "nmetrics",
     "nographic",
+    "nproxy",
     "nstore",
     "ntex",
     "openapi",
